main-prep/alb-ec2-works/bastion-host/bastion-host.tf
# EC2 Instance
resource "aws_instance" "bastion" {
  ami                    = data.aws_ami.amzlinux2.id
  instance_type          = "t2.micro"
  user_data              = file("${path.module}/bastion-user-data/bastion-host-user-data.sh")
  key_name               = "terraform-key"
  vpc_security_group_ids = [aws_security_group.ssh_http_sg.id]

  subnet_id = data.aws_subnet.eks_public_subnet_01.id

  tags = {
    "Name" = "bastion-host"
  }
}


# Create Elastic IP for Bastion Host
resource "aws_eip" "bastion_eip" {
  instance = aws_instance.bastion.id
  vpc      = true
  tags = {
    "Name" = "Bastion Pulic IP"
  }
}


# Create a Null Resource and Provisioners
resource "null_resource" "copy_ec2_keys" {
  depends_on = [aws_instance.bastion]
  # Connection Block for Provisioners to connect to EC2 Instance
  connection {
    type        = "ssh"
    host        = aws_eip.bastion_eip.public_ip
    user        = "ec2-user"
    password    = ""
    private_key = file("private-key/terraform-key.pem")
  }

  ## File Provisioner: Copies the jenkins-key.pem file to /tmp/jenkins-key.pem
  provisioner "file" {
    source      = "private-key/terraform-key.pem"
    destination = "/tmp/terraform-key.pem"
  }
  ## Remote Exec Provisioner: Using remote-exec provisioner fix the private key permissions on Bastion Host
  provisioner "remote-exec" {
    inline = [
      "sudo chmod 400 /tmp/terraform-key.pem"
    ]
  }
}
